--- a/style/default.css
+++ b/style/default.css
@@ -79,6 +79,11 @@ h1, h2, h3, p {
 	left: 0;
 }
 
+.navigation--banner {
+	position: absolute;
+	background-color: rgba(0, 0, 0, 0);
+}
+
 
 .container {
 	width: 73%;
