--- a/style/default.css
+++ b/style/default.css
@@ -242,8 +242,8 @@ h1, h2, h3, p {
 }
 
 .advert__text-link {
-		color: #fff;
-		font-size: 18px;
+	color: #fff;
+	font-size: 18px;
 }
 
 .advert__item {
@@ -252,4 +252,88 @@ h1, h2, h3, p {
 	margin-left: 100px;
 	align-self: flex-end;
 }
+
+.works {
+	text-align: center;
+}
+
+.works-title {
+	font-size: 35px;
+	margin-top: 120px;
+	margin-bottom: 70px;
+	text-transform: uppercase;
+}
+
+.works__samples {
+	width: 100%;
+	margin-top: 70px;
+	margin-bottom: 80px;
+
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.works__samples-img {
+	min-width: 272px;
+	height: 320px;
+	margin-right: 30px;
+	margin-bottom: 10px;
+
+	background-color: grey;
+	background-repeat: no-repeat;
+	background-position: center center;
+	-webkit-background-size: cover;
+	background-size: cover;
+}
+
+.works__samples-img--kinderen {
+	background-image: url(../img/kinderen.png);
+	border: .5px solid grey;
+}
+
+.works__samples-img--jetindus {
+	background-image: url(../img/jetindus.png);
+}
+
+.works__samples-img--trimplement {
+	background-image: url(../img/trimplement.png);
+}
+
+.works__samples-img:last-child {
+	margin-right: 0;
+}
+
+.works__samples-link {
+	width: 100%;
+	height: 100%;
+
+	font-size: 22px;
+	color: #fff;
+
+	text-decoration: none;
+	text-transform: uppercase;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+
+	opacity: 0;
+	background-color: rgb(0, 0, 0);
+	transition: all .3s ease;
+}
+
+
+.works__samples-link:hover {
+	opacity: .7;
+}
+
+.works__samples-link-anchor {
+	margin-top: 40px;
+}
+
+
+
+
 
