--- a/style/default.css
+++ b/style/default.css
@@ -116,7 +116,7 @@ h1, h2, h3, p {
 	margin-right: 50px;
 }
 
-.navigation__bar-menu-item:last-child{
+.navigation__bar-menu-item:last-child {
 	margin-right: 0;
 }
 
@@ -333,7 +333,102 @@ h1, h2, h3, p {
 	margin-top: 40px;
 }
 
+.footer {
+	height: 800px;
+	background-color: grey;
+	background-repeat: no-repeat;
+	background-position: center center;
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-image: url(../img/footer.png);
+
+	text-align: center;
+	padding-top: 120px;
+
+}
+
+.footer__title {
+	color: #fff;
+	font-size: 35px;
+	font-weight: 600;
+	text-transform: uppercase;
+	margin-bottom: 75px;
+}
+
+.footer__socialnet {
+	margin:70px 0 80px;
+	display: flex;
+	list-style: none;
+	justify-content: center;
+}
+
+.footer__socialnet-icons {
+	margin-right: 30px;
+}
+
+.footer__socialnet-icons:last-child {
+	margin-right: 0;
+}
+
+.footer__socialnet-icons-link {
+	display: block;
+	width: 30px;
+	height: 30px;
+	/*background-color: white;*/
+	background-image: url(../img/socialnets_sprite.png);
+	background-size: 600%;
+	background-repeat: no-repeat;
+}
+
+.footer__socialnet-icons-link--twitter {
+	background-position: 0px 0px;
+}
+
+.footer__socialnet-icons-link--facebook {
+	background-position: -35px 0px;
+}
+
+.footer__socialnet-icons-link--linkedin {
+	background-position: -74px 0px;
+}
+
+.footer__socialnet-icons-link--vimeo {
+	background-position: -113px 0px;
+}
+.footer__socialnet-icons-link--behance {
+	background-position: -156px 0px;
+}
+
+.footer__form {
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: 50px;
+}
+
+.footer__form-block {
+	flex-basis: 40%;
+	width: 200px;
+	height: 50px;
+	border-bottom: 2px solid rgba(255, 255, 255, .3);
+	text-align: left;
+	padding-left: 40px; 
+	padding-top: 15px;
+	margin-left: 60px;
+}
+
+.footer__form-block:last-child {
+	flex-basis: 86%;
+	margin-right: 0px;
+}
 
 
+.footer__form-block-input {
+	border-width: 0;
+	background-color: rgba(0, 0, 0, 0);
+
+	color: rgba(255, 255, 255, .3);
+	font-size: 18px;
+	font-style: italic;
+}
 
 
