--- a/style/elegnat-ui.css
+++ b/style/elegnat-ui.css
@@ -18,7 +18,7 @@
 	display: inline-block;
 	height: 60px;
 
-	border: 1px solid;
+	border: 2px solid;
 
 	font-size: 24px;
 	font-weight: 300;
@@ -26,7 +26,7 @@
 	text-decoration: none;
 	text-transform: uppercase;
 
-	padding: 18px 25px;
+	padding: 15px 25px;
 
 	color: #222222;
 
@@ -44,3 +44,13 @@
 	margin-bottom: 80px;
 }
 
+.elegant-btn--white {
+	width: 185px;
+	color: #fff;
+}
+
+.elegant-btn--white:hover {
+	background-color: #fff;
+	color: #222222;
+	border: 1px solid #fff;
+}
