--- a/style/default.css
+++ b/style/default.css
@@ -1,3 +1,6 @@
+
+
+
 * {
 	margin: 0;
 	padding: 0;
@@ -39,7 +42,7 @@ h1, h2, h3, p {
 	transform: translate(-50%, -50%);
 
 	text-align: center;
-	width: 625px;
+	max-width: 625px;
 }
 
 .banner__text-title {
@@ -94,11 +97,11 @@ h1, h2, h3, p {
 	justify-content: inherit;
 	align-items: inherit;
 	flex-wrap: inherit;
+	height: inherit;
 }
 
 
 .navigation__logo {
-	/*position: static;*/
 	width: 110px;
 	height: 17px;
 	background: url(../img/Logo.png);
@@ -111,6 +114,7 @@ h1, h2, h3, p {
 	display: flex;
 	list-style: none;
 	text-transform: uppercase;
+	word-wrap: normal;
 }
 
 .navigation__bar-menu-item {
@@ -129,6 +133,7 @@ h1, h2, h3, p {
 	color: #fff;
 	font-weight: 600;
 	text-decoration: none;
+	word-wrap: normal;
 }
 
 .services {
@@ -249,8 +254,14 @@ h1, h2, h3, p {
 
 .advert__item {
 	width: 270px;
-	height: auto;
+	height: 100%;
 	margin-left: 100px;
+	align-self: flex-end;
+	display: flex;
+	justify-content: flex-end;
+}
+
+.advert__item-pict {
 	align-self: flex-end;
 }
 
@@ -272,11 +283,12 @@ h1, h2, h3, p {
 
 	display: flex;
 	justify-content: space-between;
-	flex-wrap: wrap;
+	/*flex-wrap: wrap;*/
 }
 
 .works__samples-img {
-	min-width: 272px;
+	width: 33%;
+	/*min-width: 272px;*/
 	height: 320px;
 	margin-right: 30px;
 	margin-bottom: 10px;
